# structure-prediction-benchmark

./: .gitignore  CLAUDE.md  CONTAINERS.md  EXPERIMENT_PLAN.md  README.md  pyproject.toml
configs/: targets_pilot.yaml
cwl/tools/: a3m-to-pqt.cwl  alphafold-predict.cwl  batch-compare.cwl  boltz-predict.cwl  chai-predict.cwl  compare-structures.cwl  esmfold-predict.cwl  fetch-pdb.cwl  jackhmmer-msa.cwl  make-boltz-yaml.cwl  mmseqs2-msa.cwl  sto-to-a3m.cwl  subsample-msa.cwl
cwl/workflows/: experiment1-within-tool.cwl  experiment2-across-tools.cwl  experiment3-msa-impact.cwl  experiment4-msa-depth.cwl  generate-msas-jackhmmer.cwl  generate-msas-mmseqs2.cwl  generate-msas.cwl
docker/protein-compare/: Dockerfile
docs/: ProteinFoldingExperiment.pptx
inputs/: experiment1-inputs.yml  experiment2-inputs.yml  experiment3-inputs.yml  experiment4-inputs.yml  experiment4-smoke-1l2y.yml  generate-msas-inputs.yml  generate-msas-jackhmmer.yml  generate-msas-mmseqs2.yml  generate-msas-smoke-1l2y.yml
reports/: msa-generation-report.md
scripts/: collect_metrics.py  compute_msa_stats.py  download_databases.py  generate_msas.py  plot_results.py  prepare_targets.py  subsample_msa.py
src/protein_folding/: __init__.py  fetch_pdbs.py
testdata/: single-target-job.yml
