[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protein-folding"
version = "0.1.0"
description = "Tools for protein structure analysis and folding"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
fetch-pdbs = "protein_folding.fetch_pdbs:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
